# subsphere

./: Cargo.toml  LICENSE.APACHE  LICENSE.MIT  README.md  benchmarks.txt  catalog.md
.github/workflows/: rust.yml
benches/: tessellation.rs
render/: Cargo.toml
render/src/: lib.rs  math.rs
render/tests/: doc.rs
src/: basetri.rs  hex.rs  ico.rs  icosphere.rs  lib.rs  math.rs  octo.rs  proj.rs  statictri.rs  subtri.rs  tri.rs  util.rs
src/math/: polynomials.rs
src/proj/: fuller.rs
tests/: catalog.rs  test.rs
tests/snapshots/: test__icosphere_2_2.snap  test__icosphere_4_0.snap  test__icosphere_base.snap
