[package]
name = "subsphere"
version = "0.7.1"
edition = "2024"
authors = ["Dmitry Zamkov <dmitry94@gmail.com>"]
description = "Sphere tessellation toolkit"
repository = "https://github.com/dzamkov/subsphere"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "icosahedron", "hexagon", "sphere", "tessellation"]
categories = ["mathematics", "data-structures", "graphics"]
readme = "README.md"

[workspace]
members = ["render"]

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "tessellation"
harness = false
